src/pages/pages.css
/* ... */
.software2-img {
  width: 25vw;
  margin: auto;
  margin-bottom: 30px;
}

.software3 {
  background-image: url("../../dist/images/software/color5.png");
  width: 100%;
  min-height: 100vh;
}

.software4 {
  background-image: url("../../dist/images/software/color3.png");
  width: 100%;
  min-height: 100vh;
}

.software-grid {
  display: grid;
  width: 100%;
  grid-template-columns: 40% 20% 40%;
  grid-template-rows: 50vh 50vh auto;
}

.software-grid-text {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  overflow: hidden;
  color: white;
  text-align: right;
  padding: 40px;
  padding-left: 5vw;
}

.grid-text-title {
  font-size: 50px;
  width: 100%;
}

.grid-stairs {
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  overflow: hidden;
  margin: 40px;
  margin-left: 0;
}

.grid-bag {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 3;
  overflow: hidden;
  margin: 40px;
}

.slb {
  width: 100%;
  margin-bottom: 40px;
  margin-top: 0;
  justify-content: center;
}

.slb-text {
  color: white;
  width: 30%;
}

.slb-img {
  padding: 40px;
  padding-top: 0;
  width: 40vw;
}

.desk {
  background-image: url("../../dist/images/software/desk.png");
  width: 100%;
  height: 100vh;
  color: white;
  text-align: center;
  align-content: center;
}

.led {
  height: 91vh;
}

ut {
  color: rgb(191, 87, 0);
}

pi {
  color: rgb(195, 33, 74);
}

arduino {
  color: rgb(1, 152, 158);
}

processing {
  color: rgb(35, 117, 189)
}

.freelance {
  width: 100%;
  padding-right: 20%;
  padding-left: 20%;
  font-size: 50px;
  line-height: 50px;
}

@media (max-width: 500px) {
  .about-top-img {
    width: 100vw;
    margin-right: 0;
  }
  .about-top-text {
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .about-bottom-img {
    width: 100vw;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 0;
  }
  .about-bottom-text {
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .about-bottom-left-text {
    text-align: left;
    width: 98vw;
    color: rgb(221, 221, 221);
    font-size: 10px;
    padding: 2px;
  }
  .home {
    background-image: url("../../dist/images/mobile-room.jpg");
  }
  .gallery {
    width: 100%;
    margin-right: 0;
    margin-left: 0;
  }
  .software-intro {
    padding-bottom: 50px;
    padding-left: 20px;
    padding-right: 20px;
    font-size: 15px;
    line-height: 20px;
  }
  .software-ft-button {
    margin-bottom: 30px;
  }
  .software-ft {
    margin-top: 10px;
  }
  .software-ft-title {
    font-size: 30px;
    line-height: 40px;
    margin-left: 20px;
    margin-right: 20px;
  }
  .software-ft-info {
    padding-left: 20px;
    padding-right: 20px;
  }
  .software1 {
    min-height: 0;
  }
  .software2 {
    min-height: 0;
    padding-top: 20px;
    padding-bottom: 0;
  }
  .software3 {
    min-height: 0;
  }
  .led {
    height: auto;
  }
  .software-grid {
    display: block;
  }
  .software-grid-text {
    width: 100%;
    text-align: center;
    padding: 20px;
    padding-bottom: 0;
  }
  .grid-text-title {
    font-size: 30px;
    line-height: 40px;
    margin-left: 20px;
    margin-right: 20px;
    padding-bottom: 20px;
  }
  .grid-stairs {
    margin: 40px;
  }
  .grid-slb-text {
    margin: 20px;
    text-align: center;
    padding-right: 0px;
  }
  .freelance {
    width: 100%;
    padding-right: 20px;
    padding-left: 20px;
    font-size: 30px;
    line-height: 40px;
  }
  .software2-img {
    width: 40vw;
  }
  .software2-flex {
    padding-left: 20px;
    padding-right: 20px;
    flex-wrap: wrap;
  }
  .software-ft {
    padding-right: 20px;
    padding-left: 20px;
  }

  .slb {
    justify-content: center;
  }
  
  .slb-text {
    text-align: center;
    width: 90vw;
  }
  
  .slb-img {
    width: 100vw;
  }
}

